--- a/hw_data_structures.ipynb
+++ b/hw_data_structures.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas "
+    "import pandas #Imports pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -92,33 +92,62 @@
        "2  Pablo  False    28   Spain    Master"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "friends[friends.woman==False].sort_values('ages',ascending=True).head(1)\n"
+    "friends[friends.woman==False].sort_values('ages',ascending=True).head(1) \n",
+    "#Sorts the ages of men in friends in ascending order to determine the youngest male and his country"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "27"
+       "2    Spain\n",
+       "Name: country, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "friends.min().ages"
+    "men = friends.where(friends.woman == False)\n",
+    "men[men.ages == min(men.ages)].country\n",
+    "#Creates men containing the males in the group then finds the minimum age and country  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    Spain\n",
+       "Name: country, dtype: object"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "men = friends.query('woman == False')\n",
+    "men[men.ages == min(men.ages)].country\n",
+    "#Creates men containing the males in the group then finds the minimum age and country "
    ]
   },
   {
@@ -126,9 +155,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "friends.where(woman == False)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
