--- a/ex_controlOfEx.ipynb
+++ b/ex_controlOfEx.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas"
+    "import pandas #imports pandas"
    ]
   },
   {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -153,13 +153,14 @@
        " ('Juana', 'Peru')]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(zip(names, country))"
+    "listOfTuples=[(n,c) for (n,c) in zip(friends.names, friends.country)] #creates a set of tuples\n",
+    "listOfTuples"
    ]
   },
   {
@@ -179,12 +180,13 @@
     }
    ],
    "source": [
-    "Peruvians=0\n",
+    "#Creates a count of people from Peru \n",
+    "Peruvians=0 #Inializes count\n",
     "for country in friends.country:\n",
     "    if country == 'Peru':\n",
     "        Peruvians +=1\n",
     "    \n",
-    "Peruvians"
+    "Peruvians #Returns the count"
    ]
   },
   {
@@ -193,31 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "notPeruvian=[\"Chile\", \"Senegal\", \"Spain\", \"Norway\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Peruvian = 6\n",
-    "for country in friends.country:\n",
-    "    if not country == 'Peru' :\n",
-    "        Peruvian -=1\n",
-    "Peruvian"
+    "notPeruvian=[\"Chile\", \"Senegal\", \"Spain\", \"Norway\"] "
    ]
   },
   {
@@ -238,60 +216,9 @@
    ],
    "source": [
     "Peruvian = 0\n",
-    "for country in friends.country:\n",
+    "for country in friends.country: #Counts number of Peruvians \n",
     "    if country not in notPeruvian:\n",
     "        Peruvian +=1\n",
-    "Peruvian"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "bad operand type for unary ~: 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m--------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-140-68c167721a3f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mPeruvian\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcountry\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfriends\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcountry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0;34m~\u001b[0m\u001b[0mfriends\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcountry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0mPeruvian\u001b[0m \u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mPeruvian\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__invert__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1141\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__invert__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1142\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1143\u001b[0;31m             \u001b[0marr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moperator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values_from_object\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1144\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__array_wrap__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1145\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: bad operand type for unary ~: 'str'"
-     ]
-    }
-   ],
-   "source": [
-    "Peruvian = 0\n",
-    "for country in friends.country:\n",
-    "    if ~\n",
-    "        Peruvian +=1\n",
-    "Peruvian"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Peruvian = 0\n",
-    "for country in friends.country:\n",
-    "    if ~isinstance(value, str):\n",
-    "        Peruvian +=1\n",
-    "\n",
     "Peruvian"
    ]
   },
@@ -312,12 +239,12 @@
     }
    ],
    "source": [
-    "Men=0\n",
-    "for woman in friends.woman:\n",
+    "Men=0 \n",
+    "for woman in friends.woman: #Counts number of men \n",
     "    if not woman:\n",
     "        Men +=1\n",
     "\n",
-    "Men"
+    "Men "
    ]
   },
   {
@@ -338,7 +265,7 @@
    ],
    "source": [
     "Men=0\n",
-    "for woman in friends.woman:\n",
+    "for woman in friends.woman: #Counts number of men \n",
     "    if ~woman == -1:\n",
     "        Men +=1\n",
     "\n",
